--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     
     </style>
 
-    <h1>Secound website</h1>
+    <h1>Second website</h1>
     <button onClick="alertbutton()">Click Me</button>
 
 </body>
