html: header, goddes story json file, css: új stílus a header-höz

--- a/index.html
+++ b/index.html
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<link rel="stylesheet" href="app.css">
-<script src="app.js"></script>
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <script src="app.js"></script>
+    <link rel="stylesheet" href="app.css">
 </head>
 
 <body>
     
-    <style> 
-        body{
-            text-align: center; /* Középre igazítás */
-            font-size: 25px; /* Példa méret: 20 pixel */
-        } 
-    
-    </style>
+    <header>
+        <a class="h_title">CARDS</a>
+        <a calss="h_text">Second website</a> 
+        <a href="https://bence021.github.io/"><button class="h_button">Back</button></a>
+    </header>
 
-    <h1>Second website</h1>
+    <h1>Valami tartalom lesz itt....</h1>
     <button onClick="alertbutton()">Click Me</button>
 
 </body>
