Képek megjelenítése teszt (helyi szerveren nem működik)

--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Card Library</title>
 
-    <script src="app.js"></script>
     <link rel="stylesheet" href="app.css">
 </head>
 
@@ -21,6 +20,9 @@
     <h1>Valami tartalom lesz itt....</h1>
     <button onClick="alertbutton()">Click Me</button>
 
+    <div id="cardContainer" class="card-container"></div>
+
+    <script src="app.js"></script>
 </body>
 
 </html>
