--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <h1>Valami tartalom lesz itt....</h1>
     <button onClick="alertbutton()">Click Me</button>
 
-    <div id="cardContainer" class="card-container"></div>
+    <div id="cardContainer" class="card-container">   <!-- id js-ben/ class css-ben így hivatkozunk rá -->
+        
+    </div>
 
 </body>
 
