kezdetleges filter bar, setTitle dinamikusan, és ezek stílusa, card header keret globális stílus változóba a szín ki lett szervezve

--- a/index.html
+++ b/index.html
@@ -15,14 +15,22 @@
     <header>
         <a class="h_title">CARDS</a>
         <a calss="h_text">Second website</a> 
-        <a href="https://bence021.github.io/"><button class="h_button">Back</button></a>
+        <a href="https://bence021.github.io/"><button class="h_button">Back</button></a>  
     </header>
 
-    <h1>Valami tartalom lesz itt....</h1>
-    <button onClick="alertbutton()">Click Me</button>
+    <div id="filterBar" class="filter-bar">
+        <div class="filter">Filter 1</div>
+        <div class="filter">Filter 2</div>
+        <div class="filter">Filter 3</div>
+        <div class="filter">Filter 4</div>
+        <div class="filter">Filter 5</div>
+    </div>
 
-    <div id="cardContainer" class="card-container">   <!-- id js-ben/ class css-ben így hivatkozunk rá -->
-        
+    <h1 style="text-shadow: 2px 0px 5px rgb(255, 255, 255); ">Goddes Story </h1>
+    <!-- <button onClick="alertbutton()">Click Me</button> -->
+
+    <div id="cardContainer" class="card-container">
+        <!-- id js-ben/ class css-ben így hivatkozunk rá -->
     </div>
 
 </body>
