--- a/index.html
+++ b/index.html
@@ -26,7 +26,14 @@
         <div class="filter">Filter 5</div>
     </div>
 
-    <h1 style="text-shadow: 2px 0px 5px rgb(255, 255, 255); ">Goddes Story </h1>
+    <!-- 
+    <span style="text-shadow: 2px 0px 5px rgb(255, 255, 255); 
+    font-size: xx-large; 
+    font-weight: bold;
+    margin-top: 20px;
+    "> Goddes Story </span>
+    -->
+
     <!-- <button onClick="alertbutton()">Click Me</button> -->
 
     <div id="cardContainer" class="card-container">
